--- a/Forecast_engine_DEBUG NOTEBOOK.ipynb
+++ b/Forecast_engine_DEBUG NOTEBOOK.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +65,341 @@
     "import numpy as np\n",
     "import datetime\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import forecast_engine.modelling.utils.config as config\n",
+    "import forecast_engine.modelling.utils.logger as logger\n",
+    "import forecast_engine.preprocess.nodes as preprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_catalog = config.load_catalog_params(os.getcwd(), 'conf/catalogs')\n",
+    "config_parameters = config.load_catalog_params(os.getcwd(), 'conf/parameters')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "univariate_models = {}\n",
+    "multivariate_models = {}\n",
+    "if globals()['holt_winters'] : univariate_models = {func.__name__:func for func in filter(callable, globals()['holt_winters'].__dict__.values()) if func.__name__ in config_parameters['forecast_engineSettings']['univariate']}\n",
+    "if globals()['naive_models'] : univariate_models.update({func.__name__:func for func in filter(callable, globals()['naive_models'].__dict__.values()) if func.__name__ in config_parameters['forecast_engineSettings']['univariate']})\n",
+    "config_parameters['forecast_engineSettings']['univariate'] = [x for x in config_parameters['forecast_engineSettings']['univariate'] if x not in list(univariate_models.keys())] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['rw_drift',\n",
+       " 'croston',\n",
+       " 'arima',\n",
+       " 'garch',\n",
+       " 'linear_regression_mv',\n",
+       " 'xgboost_mv',\n",
+       " 'prophet',\n",
+       " 'causal_impact_mv',\n",
+       " 'light_gbm',\n",
+       " 'random_forest_mv']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config_parameters['forecast_engineSettings']['univariate']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'linear_regression_mv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m [ univariate_models\u001b[38;5;241m.\u001b[39mupdate({func\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m:func  \u001b[38;5;28;01mfor\u001b[39;00m func \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mfilter\u001b[39m(callable, \u001b[38;5;28mglobals\u001b[39m()[i]\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m\u001b[38;5;241m.\u001b[39mvalues())}) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m  config_parameters[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mforecast_engineSettings\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124munivariate\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0m [ univariate_models\u001b[38;5;241m.\u001b[39mupdate({func\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m:func  \u001b[38;5;28;01mfor\u001b[39;00m func \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mfilter\u001b[39m(callable, \u001b[38;5;28;43mglobals\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m\u001b[38;5;241m.\u001b[39mvalues())}) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m  config_parameters[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mforecast_engineSettings\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124munivariate\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'linear_regression_mv'"
+     ]
+    }
+   ],
+   "source": [
+    "[ univariate_models.update({func.__name__:func  for func in filter(callable, globals()[i].__dict__.values())}) for i in  config_parameters['forecast_engineSettings']['univariate']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in config_parameters['forecast_engineSettings']['univariate']:\n",
+    "    if i not in list(univariate_models.keys()):\n",
+    "        univariate_models.update({func.__name__:func  for func in filter(callable, globals()[i].__dict__.values())})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_parameters['forecast_engineSettings']['univariate'] = [x for x in config_parameters['forecast_engineSettings']['univariate'] if x not in list(univariate_models.keys())] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['linear_regression_mv', 'causal_impact_mv', 'light_gbm']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config_parameters['forecast_engineSettings']['univariate']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:forecast_engine.modelling.utils.logger:loaded config and parameters for preprocess\n",
+      "INFO:forecast_engine.modelling.utils.logger:loaded config and parameters for forecast engine\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "import forecast_engine.modelling.utils.nodes as utils\n",
+    "import forecast_engine.modelling.forecast_engine.forecast_loop as forecast_loop\n",
+    "import forecast_engine.modelling.forecast_engine.forecast_engine_pipeline as forecast_engine_pipeline\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "import forecast_engine.modelling.models.ml_models.naive_models as naive_models\n",
+    "import forecast_engine.modelling.models.ml_models.holt_winters as holt_winters\n",
+    "\n",
+    "import forecast_engine.modelling.models.ml_models.garch as garch\n",
+    "import forecast_engine.modelling.models.ml_models.rw_drift as rw_drift\n",
+    "import forecast_engine.modelling.models.ml_models.arima as arima\n",
+    "import forecast_engine.modelling.models.ml_models.croston as croston\n",
+    "\n",
+    "import forecast_engine.modelling.models.ml_models.causal_impact as causal_impact\n",
+    "import forecast_engine.modelling.models.ml_models.prophet as prophet\n",
+    "\n",
+    "import forecast_engine.modelling.models.ml_models.light_gbm as light_gbm\n",
+    "import forecast_engine.modelling.models.ml_models.xgboost as xgboost\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "import forecast_engine.modelling.models.ml_models.linear_regression_mv as linear_regression_mv\n",
+    "import forecast_engine.modelling.models.ml_models.arima_mv as arima_mv\n",
+    "import forecast_engine.modelling.models.ml_models.causal_impact_mv as causal_impact_mv\n",
+    "import forecast_engine.modelling.models.ml_models.xgboost_mv as xgboost_mv\n",
+    "import forecast_engine.modelling.models.ml_models.light_gbm_mv as light_gbm_mv\n",
+    "import forecast_engine.modelling.models.ml_models.prophet_mv as prophet_mv\n",
+    "import forecast_engine.modelling.models.ml_models.olsregression_mv as olsregression_mv\n",
+    "import forecast_engine.modelling.models.ml_models.random_forest_mv as random_forest_mv\n",
+    "\n",
+    "\n",
+    "import forecast_engine.modelling.utils.config as config\n",
+    "import forecast_engine.modelling.utils.logger as logger\n",
+    "import forecast_engine.preprocess.nodes as preprocess\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "class thunderbird():\n",
+    "    \n",
+    "    all = {}\n",
+    "\n",
+    "\n",
+    "    # Load congif\n",
+    "    config_catalog = config.load_catalog_params(os.getcwd(), 'conf/catalogs')\n",
+    "    config_parameters = config.load_catalog_params(os.getcwd(), 'conf/parameters')\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    # Inputs\n",
+    "    country = config_catalog['data_preprocessing']['country']\n",
+    "    sales_order = config_catalog['data_preprocessing']['sales_order_file_path']\n",
+    "    weather = config_catalog['data_preprocessing']['drivers']['weather']\n",
+    "    macro = config_catalog['data_preprocessing']['drivers']['macro']\n",
+    "        \n",
+    "    # Output Paths\n",
+    "    processed_data = config_catalog['output_file_path']['processed_data']\n",
+    "    classifier_train = config_catalog['output_file_path']['classifier_train']\n",
+    "    univariate = config_catalog['output_file_path']['univariate']\n",
+    "    multivariate = config_catalog['output_file_path']['multivariate']\n",
+    "    ensemble = config_catalog['output_file_path']['ensemble']\n",
+    "    fitted_values = config_catalog['output_file_path']['fitted_values']\n",
+    "    model_list = config_catalog['output_file_path']['model_list']\n",
+    "    forecast_output = config_catalog['output_file_path']['forecast_output']\n",
+    "    \n",
+    "    # Forecast Engine Parameters\n",
+    "    debug_flag = config_parameters['forecast_engineSettings']['debug_flag']\n",
+    "    debug_models = config_parameters['forecast_engineSettings']['debug_models']\n",
+    "    outlier_flag = config_parameters['forecast_engineSettings']['outlier_flag']\n",
+    "    select_variable_flag = config_parameters['forecast_engineSettings']['select_variable_flag']\n",
+    "    all_at_once_flag = config_parameters['forecast_engineSettings']['all_at_once_flag']\n",
+    "    months_to_forecast = config_parameters['forecast_engineSettings']['months_to_forecast']\n",
+    "    max_validation = config_parameters['forecast_engineSettings']['max_validation']\n",
+    "    validation_window = config_parameters['forecast_engineSettings']['validation_window']\n",
+    "    single_series = config_parameters['forecast_engineSettings']['single_series']\n",
+    "    multivariate_flag = config_parameters['forecast_engineSettings']['multivariate_flag']\n",
+    "    logger.logger.info(f\"loaded config and parameters for preprocess\")\n",
+    "    logger.logger.info(f\"loaded config and parameters for forecast engine\")\n",
+    "    \n",
+    "\n",
+    "    def __init__(self,name,df):\n",
+    "\n",
+    "        self.name = name\n",
+    "        self.df = df\n",
+    "\n",
+    "        thunderbird.all[self.name] = self.df \n",
+    "        \n",
+    "        \n",
+    "\n",
+    "    \n",
+    "                \n",
+    "    @classmethod\n",
+    "    def instantiate_inputs(cls):\n",
+    "        \n",
+    "        # Load input files\n",
+    "        sales_data, df = preprocess.read_prep_sales_order(thunderbird.sales_order)\n",
+    "        wthr_data = preprocess.read_prep_weather(thunderbird.weather)\n",
+    "        macro = preprocess.read_macro_files(thunderbird.macro, country = thunderbird.country)\n",
+    "\n",
+    "        logger.logger.info(f\" name : raw_data loaded, data shape: {df.shape}\")\n",
+    "        logger.logger.info(f\" name : wthr_data loaded, data shape: {wthr_data.shape}\")\n",
+    "        logger.logger.info(f\" name : macro loaded, data shape: {macro.shape}\")\n",
+    "        thunderbird('raw_data',df), thunderbird('wthr_data',wthr_data), thunderbird('macro',macro)\n",
+    "\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def preprocess_inputs(cls):\n",
+    "        dates, act_dates = preprocess.prep_dates_list(thunderbird.all['raw_data'])\n",
+    "        sub_season = [str(x)+'_Season' for x in dates]\n",
+    "        thunderbird.all['raw_data'][sub_season] = thunderbird.all['raw_data'].apply( lambda x : preprocess.decomposition(x,dates,thunderbird.all['raw_data'].columns), axis = 1, result_type=\"expand\")\n",
+    "        thunderbird.all['raw_data']['intermittence'] = thunderbird.all['raw_data'].apply(lambda x : preprocess.intermittence(x), axis =1)\n",
+    "        thunderbird.all['raw_data']['cov'] = thunderbird.all['raw_data'][dates].apply(lambda x : preprocess.cov(x), axis =1)\n",
+    "        thunderbird.all['raw_data']['seq - flag'] = thunderbird.all['raw_data'].apply(lambda x : preprocess.seq_flag(x,dates,thunderbird.all['raw_data'].columns) , axis = 1)\n",
+    "        thunderbird.all['raw_data'].drop(['intermittence','cov'],axis =1,inplace=True)\n",
+    "        thunderbird.all['raw_data']['Country'] = 'Mexico'\n",
+    "        data = pd.merge(thunderbird.all['raw_data'], thunderbird.all['macro'], on = 'Country', how = 'left')\n",
+    "        data = pd.merge(data, thunderbird.all['wthr_data'], on = 'Country', how = 'left')\n",
+    "        data.drop('Country',axis=1,inplace=True)\n",
+    "        data.rename(columns={'Material':'index'},inplace=True)\n",
+    "        data.columns = [str(i) for i in list(data.columns) ]\n",
+    "        logger.logger.info(f\" name : model_input loaded, data shape: {data.shape}\")\n",
+    "        thunderbird('data',data)\n",
+    "            \n",
+    "        \n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"{self.name}, {self.df}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:forecast_engine.modelling.utils.logger: name : raw_data loaded, data shape: (1221, 47)\n",
+      "INFO:forecast_engine.modelling.utils.logger: name : wthr_data loaded, data shape: (1, 216)\n",
+      "INFO:forecast_engine.modelling.utils.logger: name : macro loaded, data shape: (1, 97)\n"
+     ]
+    }
+   ],
+   "source": [
+    "thunderbird.instantiate_inputs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:forecast_engine.modelling.utils.logger: name : model_input loaded, data shape: (1221, 405)\n"
+     ]
+    }
+   ],
+   "source": [
+    "thunderbird.preprocess_inputs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -132,7 +467,8 @@
    "source": [
     "df['intermittence'] = df.apply(lambda x : preprocess.intermittence(x), axis =1)\n",
     "df['cov'] = df[dates].apply(lambda x : preprocess.cov(x), axis =1)\n",
-    "df['seq - flag'] = df.apply(lambda x : preprocess.seq_flag(x,dates,df.columns) , axis = 1)"
+    "df['seq - flag'] = df.apply(lambda x : preprocess.seq_flag(x,dates,df.columns) , axis = 1)\n",
+    "df.drop(['intermittence','cov'],axis =1,inplace=True)"
    ]
   },
   {
@@ -2600,7 +2936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -2775,7 +3111,7 @@
        "22         median_model  64.903240"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
