--- a/Forecast_engine_DEBUG NOTEBOOK.ipynb
+++ b/Forecast_engine_DEBUG NOTEBOOK.ipynb
@@ -19,6 +19,7 @@
    "source": [
     "import logging\n",
     "import warnings\n",
+    "import pandas as pd\n",
     "logging.getLogger('fbprophet').setLevel(logging.ERROR)\n",
     "logging.getLogger('statsmodels').setLevel(logging.WARNING)\n",
     "logging.getLogger('arch').setLevel(logging.WARNING)\n",
